--- a/mysite/polls/templates/mysite/register.html
+++ b/mysite/polls/templates/mysite/register.html
@@ -5,20 +5,30 @@ class="active"
 {% block title %}Регистрация{% endblock %}
 {% block name %}Регистрация{% endblock %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 <p class="text-center">
 <form action="" method="post">
     {% csrf_token %}
     <div class="login__block">
-        <div class="input-holder">
-            <input type="text" name="username" id="username" placeholder="Имя пользователя" required
-                   class="form-control"/>
-            <input type="password" name="password1" id="password1" placeholder="Пароль" required class="form-control"/>
-            <input type="password" name="password2" id="password2" placeholder="Повторите пароль" required
-                   class="form-control"/>
+<!--        <div class="input-holder">-->
+<!--            <input type="text" name="username" id="username" placeholder="Имя пользователя" required-->
+<!--                   class="form-control"/>-->
+<!--            <input type="text" name="email" id="email" placeholder="Эл. почта" required-->
+<!--                   class="form-control"/>-->
+<!--            <input type="text" name="first_name" id="first_name" placeholder="fn" required-->
+<!--                   class="form-control"/>-->
+<!--            <input type="text" name="last_name" id="last_name" placeholder="ln" required-->
+<!--                   class="form-control"/>-->
+<!--            <input type="password" name="password1" id="password1" placeholder="Пароль" required class="form-control"/>-->
+<!--            <input type="password" name="password2" id="password2" placeholder="Повторите пароль" required-->
+<!--                   class="form-control"/>-->
+<!--            <button type="submit" class="btn btn-primary btn">Регистрация</button>-->
+<!--        </div>-->
+            {{ form|crispy }}
             <button type="submit" class="btn btn-primary btn">Регистрация</button>
-        </div>
     </div>
+
 </form>
 </p>
 {% endblock %}
